# eisenhower

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  build-flatpak.sh  com.github.alesima.eisenhower.desktop  com.github.alesima.eisenhower.metainfo.xml  com.github.alesima.eisenhower.yml  eisenhower-gui  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flatpak.yml  release.yml
eisenhower_matrix/: __init__.py  gui.py
eisenhower_matrix/application/: __init__.py  matrix_service.py  project_management.py  task_export.py  task_import.py  task_management.py
eisenhower_matrix/domain/: __init__.py  notification_service.py  observer.py  project.py  project_repository.py  quadrant_info.py  task.py  task_repository.py
eisenhower_matrix/infrastructure/: __init__.py
eisenhower_matrix/infrastructure/persistence/: __init__.py  json_project_repository.py  json_repository.py
eisenhower_matrix/infrastructure/ui/: __init__.py  application.py  main_window.py  observer_adapter.py  project_dialog.py  quadrant_panel.py  shortcuts_window.py  task_dialog.py  task_row.py  user_guide_dialog.py
