# Eisenhower Matrix

[metadata]
name = eisenhower-matrix
version = 1.0.4
author = Alex Silva
description = A GUI tool for task prioritization using the Eisenhower Matrix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alesima/eisenhower
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business
    Topic :: Utilities

[options]
py_modules = eisenhower_matrix
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    eisenhower-gui = eisenhower_matrix.infrastructure.ui.application:main
